<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Basic_Status_axis_typ" Id="{36248c4a-0295-0b00-1d3b-047ba27ccd5c}">
    <Declaration><![CDATA[TYPE Basic_Status_axis_typ EXTENDS ReadStatus_typ : 	
	STRUCT 		
		FAULT 				: BOOL;
		DriveEnable 		: BOOL;     
		ReadyForCmd 		: BOOL;
		ClearFaultDone 		: BOOL;
		CommunicationError	: BOOL;
		MC_Power 			: Basic_MC_Power_Status_typ;
		MC_Home 			: Basic_Status_typ;
		MC_Reset 			: Basic_MC_Reset_Status_typ;
		MC_Halt 			: Basic_Status_typ;
		MC_Stop 			: Basic_Status_typ;
		MC_MoveAbsolut 		: Basic_Status_typ;
		MC_MoveAdditive 	: Basic_Status_typ;
		MC_MoveRelative		: Basic_Status_typ;
		MC_MoveVelocity 	: Basic_MC_MoveVelocity_Status_typ;
		MC_SetOverride 		: Basic_MC_SetOverride_typ;
		MC_Jog				: Basic_Status_typ ;
		AxisInitDone 		: BOOL;
		Drive				: Drive_Status_typ;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>