<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ReadStatus_typ" Id="{469c0c66-42dc-0d46-07c1-f2eca0649129}">
    <Declaration><![CDATA[TYPE ReadStatus_typ :
STRUCT 
	AxisStatus             :ST_AxisStatus ;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>