<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="CyclicAxis_typ" Id="{3b5b28ba-746c-0488-12b1-7e9ef89d417a}">
    <Declaration><![CDATA[
TYPE CyclicAxis_typ :
	STRUCT
		Input	: CyclicAxis_Input_typ ;
		Output	: CyclicAxis_Output_typ ;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>