<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="CyclicVel_Param_typ" Id="{d42008d1-4756-0411-107b-2932ec31aa89}">
    <Declaration><![CDATA[TYPE CyclicVel_Param_typ :
STRUCT
    SetVel			: LREAL;
	MaxVelocity		: LREAL;
	MaxAcc			: LREAL;
	MaxDcc			: LREAL;
	Jerk			: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>