<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Basic_cycle_CMD_typ" Id="{d3e7e5c6-f1f1-0f74-1791-6dbe93d21f8a}">
    <Declaration><![CDATA[TYPE Basic_cycle_CMD_typ :
	STRUCT
		Start 						: BOOL; (* cycle start*)
		Pause 						: BOOL; (*cycle pause*)
		ResetErr 					: BOOL; (*reset cycle fault*)
		Resume 						: BOOL; (*resume after Pause*)
		ResetCycle 					: BOOL; (*Cycle reset*)
		StepByStep 					: BOOL; (* operate the cycle step by step *)
		SetFaultEvent				: BOOL;  // Triggers Fault Event 
		DeactivateStepTimeOut 		: BOOL; (*If Input is On Process will Not Go to TimeOut Fault*) (* From Function *)
		Deacivate_Sequence_Time_Out : BOOL;
		LogMsgInit 					: BOOL := TRUE;
		EnableStateLogging			: BOOL;
		WriteExternalFaultLogCMD	: BOOL;
		WriteExternalLogCMD			: BOOL;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>